@@ -99,7 +99,7 @@ as.data.frame.list <- function(x, row.names = NULL, optional = FALSE)
         names(x) <- cn
     }
     x <- eval(as.call(c(expression(data.frame), x, check.names = !optional)))
-    if(any(m > 0)) names(x) <- sub("^..adfl.", "", names(x))
+    if(any(m > 0)) names(x) <- sub("^\\.\\.adfl\\.", "", names(x))
     if(!is.null(row.names)) {
 	row.names <- as.character(row.names)
 	if(length(row.names) != dim(x)[[1]]) stop(paste(
